feat: fix static handler security issue, add default webpack config in dev tool, add eslint no-shadow

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "quotes": ["warn", "single", {
       "allowTemplateLiterals": true
     }],
-    "no-var": 1
+    "no-var": 1,
+    "no-shadow": 2
   }
 }
