--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "a little bit this, a little bit that.",
   "main": "index.js",
   "scripts": {
-    "start-server": "nodemon server.js",
+    "start": "nodemon server.js",
     "start-pingpong": "nodemon pingpong.js",
     "build": "npm run scripts -- build",
     "dev": "npm run scripts -- dev",
     "clean": "npm run scripts -- clean",
-    "unlock-package": "rm -rf package-lock.json",
+    "unlock": "rm -rf package-lock.json",
     "lint": "npm run lint-client && npm run lint-server",
-    "lint-client": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
+    "lint-apps": "eslint -c apps/.eslintrc --ignore-path apps/.eslintignore apps/**/*.ts",
     "lint-server": "eslint -c .eslintrc --ignore-path .eslintignore **/*.js",
     "link-common": "cd ./apps/common && npm link && cd ../.. && npm link atat-common",
     "unlink-common": "npm unlink atat-common && cd ./apps/common && npm unlink",
