--- a/server.config
+++ b/server.config
@@ -3,6 +3,7 @@ MODE=development
 WEB_PORT=18080
 PINGPONG_PORT=8080
 WEB_BASE_FOLDER=apps
+RESOURCES_BASE_FOLDER=resources
 API_BASE_URL=api
 
 // Database
